高内聚 低耦合

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,8 +5,7 @@
 <p>
     Console is a minimal, responsive and light theme for Hugo inspired by Linux console. <a href="about/">(more)</a>
 </p>
-<p><b>点击左上角的`littlepig`返回主页</b>
-</p>
+<p><b>点击左上角的`littlepig`返回主页, `old-posts`为以往的blogs</b> </p>
 <br />
 
 <h1>Latest posts</h1>
